--- a/Pages/_Layout.cshtml
+++ b/Pages/_Layout.cshtml
@@ -11,8 +11,8 @@
     <link rel="stylesheet" vite-href="~/Assets/Css/app.css" asp-append-version="true"/>
     <component type="typeof(HeadOutlet)" render-mode="Server"/>
 </head>
-<body class="h-screen">
-<div class="dark:bg-black transition-colors duration-300 h-full">
+<body class="">
+<div class=""> 
     @RenderBody()
 </div>
 <div id="blazor-error-ui">
