--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -2,34 +2,37 @@
 
 <PageTitle>Home page</PageTitle>
 
-<section class=" bg-white dark:bg-slate-950">
-    @* <div style="z-index: -1" class=" w-[100vw] absolute left-0 max-h-[80vh] overflow-hidden object-contain"> *@
-    @*     <img src="/images/running-shoe.jpg" alt="running shoes" class=" object-contain "> *@
-    @* </div> *@
-    <article class="dark:text-red-600">
-        <div>
-            <h1 class="text-3xl  sm:text-4xl font-bold text-gray-800 mb-8 sm:mb-20">
-                <ApplicationLogo/>
+<section class="w-full flex flex-col justify-center items-center  h-full">
+    <article class="flex gap-16  h-full px-8 rounded-xl justify-between w-full  pt-8  items-center ">
+        <div class="flex-1">
+            <h1 class="mb-8 text-4xl lg:text-5xl font-semibold">
+                <div class="text-indigo-400">Get Out And</div>
+                <div class="font-bold text-transparent bg-clip-text bg-gradient-to-r from-sky-500 via-purple-700 to-green-400">Run</div>
             </h1>
-            <p class="text-base dark:text-red-900 sm:text-xl text-gray-600 mb-6">
-                A way to track your training progress.
+            <p class="font-light text-transparent bg-clip-text bg-gradient-to-r from-sky-500 via-purple-700 to-green-400  sm:text-xl text-gray-600 mb-6">
+                A <span class="font-semibold">new</span> way to track your training progress.
             </p>
-            <p class="text-base sm:text-xl text-gray-600 mb-6">
-                Training Schedule is a simple application that allows you to track your training progress.
-                Schedules provided by the application are based on the <a href="https://www.strongfirst.com/" target="_blank" class="text-blue-500 hover:text-blue-700">StrongFirst</a> methodology.
+            <p class="text-sm leading-6 font-semibold  text-gray-600 dark:text-slate-500 mb-6">
+                Runner is a simple application that allows you to track your training progress.
+                Leave the scheduling and planning to us, and focus on what matters most: <span class="font-bold">running</span>.
+                Schedules for all levels of runners, from beginners to advanced.
+                Reminders to keep you on track.
+                <span class="font-bold">Get out and run.</span>
             </p>
+
+            <div class="my-16 flex flex-col gap-y-4  lg:flex-row w-full justify-between">
+                <button type="button" class="text-white bg-gradient-to-r from-indigo-400 to-indigo-700  active:scale-105 transition-all duration-300
+                 font-medium rounded-full sm:text-lg md:text-xl lg:text-2xl  xl:text-3xl px-4 py-4 md:px-5 md:py-3 lg:px-6 lg:py-4 text-center mr-2 mb-2">
+                    Get Started Today
+                </button>
+                <button type="button" class="text-white bg-gradient-to-r from-sky-500 to-purple-700  active:scale-105 transition-all duration-300
+                 font-medium rounded-full sm:text-lg md:text-xl lg:text-2xl  xl:text-3xl px-4 py-4 md:px-5 md:py-3 lg:px-6 lg:py-4 text-center mr-2 mb-2">
+                    Learn More
+                </button>
+            </div>
         </div>
-        <div>
-            <h1 class="text-3xl sm:text-4xl font-bold text-gray-800 mb-8 sm:mb-20">
-                <ApplicationLogo/>
-            </h1>
-            <p class="text-base sm:text-xl text-gray-600 mb-6">
-                A way to track your training progress.
-            </p>
-            <p class="text-base sm:text-xl text-gray-600 mb-6">
-                Training Schedule is a simple application that allows you to track your training progress.
-                Schedules provided by the application are based on the <a href="https://www.strongfirst.com/" target="_blank" class="text-blue-500 hover:text-blue-700">StrongFirst</a> methodology.
-            </p>
+        <div class="flex-1 hidden md:block">
+            <img src="images/runner.svg" alt="runner" class="">
         </div>
     </article>
 </section>
