--- a/Pages/Shared/Footer.razor
+++ b/Pages/Shared/Footer.razor
@@ -1,3 +1,12 @@
-﻿<footer class="max-w-6xl mx-auto py-20 px-6">
-	<p class="text-base sm:text-xl text-gray-600 mb-6">footer</p>
+﻿<footer class="justify-between text-[0.6rem] md:text-xs gap-4 flex w-full px-8  h-10">
+    <div class="flex gap-4">
+        <p class=" text-gray-600 mb-6 dark:text-slate-300">Michael Duren 2023</p>
+        <p class=" text-gray-600 dark:text-slate-300">Runner</p>
+    </div>
+    <div>
+        <a href="">LinkedIn</a>
+        <a href="">Github</a>
+        <a href="">Twitter</a>
+        <a href="https://michaelduren.com">michaelduren.com</a>
+    </div>
 </footer>
