add: images for dark/light mode hero, dark mode is saved in local storage
Dark mode is saved in local storage, if no preference is selected
the dark mode will be dependent on system settings

--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -32,7 +32,8 @@
             </div>
         </div>
         <div class="flex-1 hidden md:block">
-            <img src="images/runner.svg" alt="runner" class="">
+            <img src="images/runner-light.svg" alt="runner" class="dark:hidden block">
+            <img class="dark:block hidden" src="images/runner-dark.svg" alt="runner" >
         </div>
     </article>
 </section>
