--- a/Pages/_Layout.cshtml
+++ b/Pages/_Layout.cshtml
@@ -26,16 +26,8 @@
     <a class="dismiss">🗙</a>
 </div>
 <script src="https://kit.fontawesome.com/f64cc054fb.js" crossorigin="anonymous"></script>
-<script>
-    window.setDarkMode = (isDarkMode) => {
-      if (isDarkMode) {
-                document.body.classList.add('dark')
-            } else {
-                document.body.classList.remove('dark')
-            }
-        }
-</script>
 <script src="_framework/blazor.server.js"></script>
 <script type="module" vite-src="~/Assets/Js/app.js" asp-append-version="true"></script>
+<script type="module" vite-src="~/Assets/Js/Theme.js" asp-append-version="true"></script>
 </body>
 </html>
