--- a/Pages/Shared/NavMenu.razor
+++ b/Pages/Shared/NavMenu.razor
@@ -36,12 +36,12 @@
                                 </svg>
                             </button>
                         </div>
-                        <div x-cloak x-on:click.outside="desktopMenuOpen = false" x-show="desktopMenuOpen" class="absolute dark:bg-slate-700  right-0 z-50 mt-2 w-48 origin-top-right shadow-lg rounded-md bg-white py-1" role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1">
+                        <div x-cloak x-on:click.outside="desktopMenuOpen = false" x-show="desktopMenuOpen" class="absolute dark:bg-slate-800  right-0 z-50 mt-2 w-48 origin-top-right shadow-lg dark:shadow-slate-800 rounded-md bg-white py-1" role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1">
                             <div>
-                                <a href="/dashboard" @click="desktopMenuOpen = false" class="block p-4 hover:bg-gray-100 dark:hover:bg-slate-500" role="menuitem">Dashboard</a>
-                                <a href="/profile/edit" @click="desktopMenuOpen = false" class="block p-4 hover:bg-gray-100 dark:hover:bg-slate-500" role="menuitem">Profile</a>
-                                <a href="/logout" @click="desktopMenuOpen = false" class="block p-4 hover:bg-gray-100 dark:hover:bg-slate-500" role="menuitem">Logout</a>
-                                <p class="text-sm py-2 px-4 border-t">@user.Name</p>
+                                <a href="/dashboard" @click="desktopMenuOpen = false" class="block p-4 dark:text-slate-300 hover:bg-gray-100 dark:hover:bg-indigo-500" role="menuitem">Dashboard</a>
+                                <a href="/profile/edit" @click="desktopMenuOpen = false" class="block p-4 dark:text-slate-300 hover:bg-gray-100 dark:hover:bg-indigo-500" role="menuitem">Profile</a>
+                                <a href="/logout" @click="desktopMenuOpen = false" class="block p-4 dark:text-slate-300 hover:bg-gray-100 dark:hover:bg-indigo-500" role="menuitem">Logout</a>
+                                <p class="text-sm dark:text-slate-300 py-2 px-4 dark:border-slate-700 border-t">@user.Name</p>
                             </div>
                         </div>
                     </div>
