--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -9,7 +9,7 @@
                 <div class="text-indigo-400">Get Out And</div>
                 <div class="font-bold text-transparent bg-clip-text bg-gradient-to-r from-sky-500 via-purple-700 to-green-400">Run</div>
             </h1>
-            <p class="font-light text-transparent bg-clip-text bg-gradient-to-r from-sky-500 via-purple-700 to-green-400  sm:text-xl text-gray-600 mb-6">
+            <p class="font-light text-transparent bg-clip-text bg-gradient-to-r from-sky-500 via-purple-700 dark:via-purple-400 to-green-400  sm:text-xl text-gray-600 mb-6">
                 A <span class="font-semibold">new</span> way to track your training progress.
             </p>
             <p class="text-sm leading-6 font-semibold  text-gray-600 dark:text-slate-500 mb-6">
