--- a/Pages/_Layout.cshtml
+++ b/Pages/_Layout.cshtml
@@ -28,6 +28,6 @@
 <script src="https://kit.fontawesome.com/f64cc054fb.js" crossorigin="anonymous"></script>
 <script src="_framework/blazor.server.js"></script>
 <script type="module" vite-src="~/Assets/Js/app.js" asp-append-version="true"></script>
-<script type="module" vite-src="~/Assets/Js/Theme.js" asp-append-version="true"></script>
+<script type="module" vite-src="~/Assets/Js/theme.js" asp-append-version="true"></script>
 </body>
 </html>
