--- a/Pages/Dashboard.razor
+++ b/Pages/Dashboard.razor
@@ -18,19 +18,24 @@
     </div>
     <div class="grid flex-1 grid-cols-12 w-full h-full text-gray-600 dark:text-slate-300  mb-10">
         <aside class="col-span-3 flex flex-col   p-4">
-            <div class="flex items-center border-b-2 pb-6 dark:border-slate-700 border-slate-300  gap-x-8">
-                <div class="text-3xl rounded-full shadow-xl flex bg-gradient-to-r from-indigo-500 to-indigo-800 p-8  text-white">
+            <div class="flex items-center flex-col lg:flex-row border-b-2 pb-6 dark:border-slate-700 border-slate-300 gap-y-4 lg:gap-y-0  lg:gap-x-8">
+                <div class="text-xl md:text-2xl lg:text-3xl rounded-full shadow-xl flex bg-gradient-to-r from-indigo-500 to-indigo-800 p-4 md:p-6 lg:p-8  text-white">
                     <i class="fa-solid fa-user-large"></i>
                 </div>
-                <div class="text-2xl">@user.Name</div>
+                <div class="text-2xl font-bold">@user.Name</div>
             </div>
-            <div class="mt-8 flex text-xl flex-col gap-x-4">
-                <button class="flex gap-2 items-center">
-                    <i class="fa-solid fa-book"></i>
-                    <div>
-                        New Journal
-                    </div>
-                </button>
+            <div class="mt-8 gap-y-8 flex xl:text-2xl lg:text-xl md:text-base text-sm flex-col gap-x-4">
+                @foreach (var link in Links)
+                {
+                    <a href="@link.Url">
+                        <button class="flex gap-2 transition-all duration-300 hover:text-gray-900 hover:dark:text-slate-200 dark:text-gray-400 items-center">
+                            <i class="@link.Icon"></i>
+                            <div>
+                                @link.Label
+                            </div>
+                        </button>
+                    </a>
+                }
             </div>
         </aside>
         <section class=" flex col-span-9  flex-col h-full text-gray-600 dark:text-slate-300  mb-10">
@@ -42,7 +47,7 @@
                     <div>
                         <h2 class="text-xl  font-semibold">Upcoming Runs</h2>
                     </div>
-                    <div class="flex flex-col shadow-xl dark:shadow-md dark:shadow-slate-800 bg-white dark:bg-slate-800 p-6 rounded-lg gap-4">
+                    <div class="flex flex-col text-sm h-full shadow-xl dark:shadow-md dark:shadow-slate-800 bg-white dark:bg-slate-800 p-6 rounded-lg gap-4">
                         <p class="text-gray-600 dark:text-slate-400">
                             No runs yet. Get started by creating a new run.
                         </p>
@@ -53,7 +58,7 @@
                     <div>
                         <h2 class="text-xl  font-semibold">Previous Runs</h2>
                     </div>
-                    <div class="flex flex-col shadow-xl dark:shadow-md dark:shadow-slate-800 bg-white dark:bg-slate-800 p-6 rounded-lg gap-4">
+                    <div class="flex flex-col text-sm h-full shadow-xl dark:shadow-md dark:shadow-slate-800 bg-white dark:bg-slate-800 p-6 rounded-lg gap-4">
                         <p class="text-gray-600 dark:text-slate-400">
                             No runs yet. Get started by creating a new run.
                         </p>
@@ -64,7 +69,7 @@
                     <div>
                         <h2 class="text-xl font-semibold">Goals</h2>
                     </div>
-                    <div class="flex flex-col shadow-xl dark:shadow-md dark:shadow-slate-800 bg-white dark:bg-slate-800 p-6 rounded-lg gap-4">
+                    <div class="flex flex-col text-sm h-full shadow-xl dark:shadow-md dark:shadow-slate-800 bg-white dark:bg-slate-800 p-6 rounded-lg gap-4">
                         <p class="text-gray-600 dark:text-slate-400">
                             No Goals yet. Get started by creating a new goal.
                         </p>
