--- a/Pages/Shared/MainLayout.razor
+++ b/Pages/Shared/MainLayout.razor
@@ -3,11 +3,11 @@
 <PageTitle>@AppName</PageTitle>
 
 <CascadingValue Value="this">
-    <div class="dark:bg-slate-900 bg-slate-200 flex flex-col h-screen transition-colors duration-300">
+    <div class="dark:bg-slate-900 bg-slate-200 flex flex-col min-h-screen transition-colors duration-300">
         <NavMenu/>
         <main class="container w-full h-full  px-6  mx-auto py-12">
             @Body
         </main>
-        <Footer/>
+        <Footer /> 
     </div>
 </CascadingValue>
