add: admin dashboard nav, and constant Routes class for route strings

--- a/Pages/Shared/NavMenu.razor
+++ b/Pages/Shared/NavMenu.razor
@@ -58,9 +58,9 @@
                     <li class="px-2 py-4">
                         <a class="" href="/register">
                             <MainButton>
-                                <ChildContent>
+                                <ButtonContent>
                                     Register
-                                </ChildContent>
+                                </ButtonContent>
                             </MainButton>
                         </a>
                     </li>
@@ -97,7 +97,6 @@
 </nav>
 
 @code {
-
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
         if (firstRender)
