--- a/Pages/Shared/Buttons/MainButton.razor
+++ b/Pages/Shared/Buttons/MainButton.razor
@@ -1,14 +1,15 @@
 <button type="button" class="text-white bg-gradient-to-r from-indigo-400 to-indigo-700  active:scale-105 transition-all duration-300 font-medium rounded-full  px-4 py-2 text-center mr-2 mb-2"
-        @onclick="OnClick"
-        >
-    @ChildContent
+        @onclick="OnClick">
+    @if (ButtonContent is not null)
+    {
+        @ButtonContent
+    }
 </button>
 
 @code {
 
     [Parameter]
-    public RenderFragment? ChildContent { get; set; }
-
+    public RenderFragment? ButtonContent { get; set; }
 
     [Parameter]
     public EventCallback OnClick { get; set; }
