--- a/Pages/Shared/MainLayout.razor
+++ b/Pages/Shared/MainLayout.razor
@@ -5,9 +5,10 @@
 <CascadingValue Value="this">
     <div class="dark:bg-slate-900 bg-slate-200 flex flex-col min-h-screen transition-colors duration-300">
         <NavMenu/>
-        <main class="container w-full h-full  px-6  mx-auto py-12">
+        <main class="container w-full h-full flex-1  px-6  mx-auto py-12">
             @Body
         </main>
-        <Footer /> 
+        <Footer >
+        </Footer>
     </div>
 </CascadingValue>
