--- a/Pages/Shared/AdminLayout.razor
+++ b/Pages/Shared/AdminLayout.razor
@@ -4,14 +4,14 @@
 
 <AuthorizeView Roles="@CustomRoles.Admin">
     <Authorized>
-        <div>
-            <h1 class="text-2xl dark:text-slate-300 sm:text-4xl mb-8 ">
+        <div class="w-full">
+            <h1 class="text-2xl text-gray-600 font-semibold  dark:text-slate-300 sm:text-4xl mb-8 ">
                 Admin Dashboard
             </h1>
         </div>
-        <div class="flex gap-8">
-            <aside class="">
-                <ul class="flex flex-col  h-full flex-1 text-gray-600 dark:text-slate-300  bg-white dark:bg-slate-800 p-6 rounded-lg gap-4">
+        <div class="flex flex-col min-h-full gap-y-4 lg:gap-y-0 min-w-full lg:flex-row lg:gap-x-4 xl:gap-8">
+            <aside class="max-h-screen">
+                <ul class="flex lg:flex-col justify-evenly lg:justify-start flex-wrap shadow-xl dark:shadow-indigo-500 dark:shadow-md  h-full flex-1 text-gray-600 dark:text-slate-300  bg-white dark:bg-slate-800 p-6 rounded-lg gap-4">
                     <li>
                         <AdminSideNavButton OnClick="@NavigateToDashboard" Icon="fa-solid fa-table-columns" Title="Dashboard"/>
                     </li>
@@ -29,13 +29,13 @@
                     </li>
                 </ul>
             </aside>
-            <section class="flex flex-col text-sm h-full flex-1 text-gray-600 dark:text-slate-300  bg-white dark:bg-slate-800 p-6 rounded-lg gap-4">
+            <section class="flex flex-col w-full shadow-xl dark:shadow-indigo-500 dark:shadow-md text-sm h-full flex-1 text-gray-600 dark:text-slate-300  bg-white dark:bg-slate-800 p-6 rounded-lg gap-4">
                 @ChildContent
             </section>
         </div>
     </Authorized>
     <NotAuthorized>
-        <section class="mx-auto max-w-6xl mb-20">
+        <section class="mx-auto min-w-full min-h-full  mb-20">
             <div class="my-6 sm:my-20 px-6 py-12 sm:py-20 sm:px-12 text-center">
                 <p class="text-base sm:text-xl text-gray-600">Sorry, you do not have the proper permissions to access this page.</p>
             </div>
