--- a/Pages/Shared/Buttons/AdminSideNavButton.razor
+++ b/Pages/Shared/Buttons/AdminSideNavButton.razor
@@ -1,4 +1,4 @@
-<button class="flex hover:dark:text-slate-200 active:scale-105 duration-300 transition-all dark:text-slate-300 text-gray-600 hover:text-gray-800 items-center text-xl gap-2 font-light stroke-1" @onclick="OnClick">
+<button class="flex hover:dark:text-slate-200 active:scale-105 duration-300 transition-all dark:text-slate-300 text-gray-600 hover:text-gray-800 items-center text-xs sm:text-sm lg:text-lg xl:text-xl gap-2 font-light stroke-1" @onclick="OnClick">
     <i class="@Icon"></i>
     <div>@Title</div>
 </button>
