--- a/Pages/Shared/Buttons/MainButton.razor
+++ b/Pages/Shared/Buttons/MainButton.razor
@@ -1,4 +1,5 @@
-<button type="button" class="text-white bg-gradient-to-r from-indigo-400 to-indigo-700  active:scale-105 transition-all duration-300 font-medium rounded-full  px-4 py-2 text-center mr-2 mb-2"
+<button type="button" class="text-white w-full bg-gradient-to-r shadow-xl dark:shadow-indigo-300 dark:shadow from-indigo-400 dark:from-indigo-500 hover:from-indigo-500 dark:hover:from-indigo-400 
+to-indigo-700 dark:to-indigo-600 hover:to-indigo-500 hover:dark:to-indigo-800 active:scale-105 transition-all duration-300 font-medium rounded-2xl  px-5 py-3 text-center mr-2 mb-2"
         @onclick="OnClick">
     @if (ButtonContent is not null)
     {
