--- a/Pages/Shared/MainLayout.razor
+++ b/Pages/Shared/MainLayout.razor
@@ -3,9 +3,9 @@
 <PageTitle>@AppName</PageTitle>
 
 <CascadingValue Value="this">
-    <div class="dark:bg-slate-900 bg-slate-200 flex flex-col min-h-screen transition-colors duration-300">
+    <div class="dark:bg-slate-900 bg-slate-100 flex flex-col min-h-screen transition-colors duration-300">
         <NavMenu/>
-        <main class="container w-full h-full flex-1  px-6  mx-auto py-12">
+        <main class="mx-4 min-h-full  h-full flex-1 px-6 flex-col  flex items-center  py-12">
             @Body
         </main>
         <Footer >
