--- a/_Imports.razor
+++ b/_Imports.razor
@@ -23,3 +23,4 @@
 @using Coravel.Queuing.Interfaces;
 @using Coravel.Events.Interfaces;
 @using Runner.Pages.Shared.Buttons
+@using Runner.Pages.Shared.Inputs;
